implement simple mode refactor code